[tool.poetry]
name = "coldpizza"
version = "0.1.0"
description = ""
authors = ["octavioflo <41705533+octavioflo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
strawberry-graphql = {extras = ["fastapi"], version = "^0.246.1"}
fastapi = {extras = ["standard"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
