[tool.poetry]
name = "coldpizza"
version = "0.1.0"
description = ""
authors = ["octavioflo <41705533+octavioflo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.5.2"
fastapi = {extras = ["standard"], version = "^0.115.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
